<resources>
    <string name="app_name">プレゼン支援</string>

    <string name="main_menu1">Timer</string>
    <string name="main_menu2">TodoList</string>
    <string name="main_menu3">Contact</string>
    <string name="main_menu4">Schedule</string>

    <string name="contact1">連絡帳</string>
    <string name="contact2">新規メール</string>
    <string name="contact3">メールテンプレート</string>

    <string name="todolist1"> a</string>
    <string name="todolist2"> a</string>

    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>

</resources>
