<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/hbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/toNM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn_state"
                android:text="@string/contact2"
                app:layout_constraintLeft_toRightOf="@id/toCI" />

            <Button
                android:id="@+id/toCI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_state"
                android:text="@string/contact1"
                app:layout_constraintLeft_toLeftOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/toMT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_state"
            android:text="@string/contact3"
            app:layout_constraintTop_toBottomOf="@id/hbox" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>